--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   staggered_grid_view_flutter: ^0.0.4
   url_launcher: ^6.1.10
   get_storage: ^2.1.1
+  image_picker: ^0.8.7
 
 
 dev_dependencies:
